Avoid using Stream.toList() which is not supported on T
Bug: 340245547
Test: atest CtsAppSearchTestCases
Change-Id: Ib54b7f9a33414d80edcea9021f29e46b26d40d27